--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -367,11 +367,16 @@ Web Services, PHP5, Tooling, Security.
 
 Die wichtigsten Grundlagenstandards für Web Services sind SOAP \cite{SOAP}, WSDL (Web Services Description Language) \cite{WSDL} und UDDI (Universal Description, Discovery and Integration) \cite{UDDI}. SOAP ist dabei das Kommunikationsprotokoll für den Zugriff auf die Dienste. Mit der Web Services Description Language (WSDL) werden vertragsähnliche Beschreibungsdokumente erstellt, die vom Server für die Nutzer angeboten werden können. Universal Description, Discovery and Integration (UDDI) ist der Standard für Namensdienste, mit denen Web Services bekannt gemacht und gesucht werden können.  Zur effektiven und interoperablen Nutzung von SOAP und, mit Abstrichen, von WSDL existieren für alle üblichen Programmiersprachen und Plattformen  voll ausgereifte Werkzeuge, die für den Produktionsbetrieb eingesetzt werden können. Für UDDI Namensdienste werden meist kommerzielle Produkte eingesetzt, die via Web Service integriert werden.
 
+%STefan: unser und wir? wie siehts denn nun aus damit? wollen wir das vermeiden wie "`der Leser"'?
 In unserer ersten Ausarbeitung \textit{"`Einführung in XML Web Services"'} \cite{WebServicePart1} haben wir SOAP, WSDL und UDDI vorgestellt und gezeigt, wie man die Standards mit PHP5 nutzen kann. PHP5 bietet eine Implementierung des SOAP-Protokolls, die sich nutzen lässt, um interoperable SOAP-Server und -Clients zu entwickeln.
 
 Um eine Klasse in PHP5 als Web Service anzubieten, erstellt man zunächst eine Beschreibung der Schnittstelle mit WSDL. Dabei definiert man unter anderem für alle Datentypen mit Hilfe von XML~Schema-Ausdrücken, wie sie für das Versenden in SOAP-Nachrichten serialisiert werden sollen. Eine Dokumentation der Methodensemantik kann manuell aus dem Quelltext der Klasse in die Schnittstellen-Beschreibung übertragen werden. Danach schreibt man ein PHP Script, das mit Hilfe der WSDL-Beschreibung einen SOAP Server startet. Dieser erzeugt dann ein Exemplar der dazugehörigen Klasse und beginnt SOAP-Anfragen zu beantworten.
 
-Das ist natürlich bei weitem nicht so komfortabel, wie man es von .NET oder JEE gewohnt ist. Zwar ist die SOAP-Implementierung sehr einfach zu benutzen, aber die manuelle Erstellung von WSDL-Beschreibungen ist extrem aufwändig und könnte prinzipiell automatisiert werden. 
+
+Das ist natürlich bei weitem nicht so komfortabel, 
+%Stefan: J2EE oder?
+wie man es von .NET oder JEE gewohnt ist. 
+Zwar ist die SOAP-Implementierung sehr einfach zu benutzen, aber die manuelle Erstellung von WSDL-Beschreibungen ist extrem aufwändig und könnte prinzipiell automatisiert werden. 
 
 To be continued...
 
@@ -1052,10 +1057,21 @@ Rückgabewerte der Datenbank abgefangen und auf die Objekte gemappt, so dass dies
 zur Verfügung gestellt werden können.
 
 \section{Zusammenfassung und Ausblick}
-Unsere Erweiterung der PHP5 Reflection API ermöglichte uns auf äußerst elegante Weise einen WSDL-Generator zu implementieren. Da die Algorithmen zum Ermitteln der Typinformationen aus dem WSDL-Generator ausgelagert waren, konnten wir gleich eine ganze Familie von Web Service Werkzeugen auf Basis der Extended Reflection API entwickeln.
+%Stefan: Unsere, hm, distanzieren möchte ich mich nicht von unserer leistung, aber es klingt ungewohnt?
+Unsere Erweiterung der PHP5 Reflection API ermöglichte uns 
+auf äußerst elegante Weise einen WSDL-Generator zu implementieren.
+ Da die Algorithmen zum Ermitteln der Typinformationen aus dem 
+ %Stefan: sind, andere zeiform bitte
+ WSDL-Generator ausgelagert waren, konnten wir gleich eine ganze 
+ Familie von Web Service Werkzeugen auf Basis der Extended Reflection API entwickeln.
 Die Fähigkeiten der Extended Reflection API sind sicherlich für viele weitere PHP Projekte interessant. Der eingeführte Annotation-Mechanismus könnte zudem eine Grundlage für die Nutzung von neuen dynamischen Programmiertechniken wie zum Beispiel aspekt-orientierter Programmierung in PHP sein.
 
-Der WSDL-Generator unterstützt alle Dialekte von WSDL 1.0 und ist konform zum WS-I Basic Profile 1.1. Zur Markierung von Klassen und Methoden als Web Service können Annotationen ähnlich wie in JEE und .NET verwendet werden. Zusätzlich werden semantische Informationen aus dem Quelltext in die WSDL-Dokumentation übernommen.
+Der WSDL-Generator unterstützt alle Dialekte von WSDL 1.0 und ist konform zum WS-I Basic Profile 1.1. 
+
+Zur Markierung von Klassen und Methoden als 
+Web Service können Annotationen ähnlich wie in 
+%Stefan: haben sie das umbenannt? oder doch J2EE? hm, google: http://www.java.com/en/about/brand/naming.jsp
+JEE und .NET verwendet werden. Zusätzlich werden semantische Informationen aus dem Quelltext in die WSDL-Dokumentation übernommen.
 Für document-wrapped Web Services können mit dem Adapter-Generator automatisch Adapter-Klassen generiert werden, die sich transparent um das Wrapping in den SOAP-Nachrichten kümmern.
 
 Die rund 20 weiterführenden WS-*-Spezifikationen im Bereich der Sicherheit, Synchronisation und Sessioning, an denen zur Zeit ununterbrochen gearbeitet wird, werden zusätzliche Felder für die Header von SOAP-Nachrichten spezifizieren. Um diese Standards in Zukunft mit PHP nutzen zu können entwickelten wir den Extended SOAP Server, der um weitere Handler erweitert werden kann, die als Kette von SOAP-Intermediaries nacheinander eine SOAP-Nachricht bearbeiten.
@@ -1063,7 +1079,9 @@ Auf der Basis des Extended SOAP Servers haben wir das Username-Token-Profile aus
 
 %TODO: something about REST
 
-Das Admin-Tool bietet schließlich eine einheitliche Oberfläche für um alle Werkzeuge zu konfigurieren und zu starten und damit automatisiert SOAP-Server für eine bestehende Anwendung zu generieren.
+Das Admin-Tool bietet schließlich eine einheitliche Oberfläche
+um alle Werkzeuge zu konfigurieren und zu starten und damit 
+automatisiert SOAP-Server für eine bestehende Anwendung zu generieren.
 
 % if have a single appendix:
 %\appendix[Proof of the Zonklar Equations]
