--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -289,11 +289,12 @@ Christoph~Hartmann, Andreas~Meyer und Sebastian~Böttner
 \maketitle
 
 \begin{abstract}
-The abstract goes here.
+
+Dieses Paper beschreibt die Ergebnisse unserer Arbeit an einer Familie von Werkzeugen für Web Services unter PHP5. Allerdings machen die besonderen Spracheigenschaften die Entwicklung von Meta-Spach-Werkzeugen etwas schwiereig. Daher wurde zunächst die Reflection API erweitert um die benötigten Informationen über Sprachkonstrukte zu bekommen. Auf dieser Basis wurde zunächst ein leistungsfähiger WSDL-Generator...
 \end{abstract}
 
 \begin{keywords}
-PHP5, Web Services, WSDL-Generator, WS-Security, REST.
+PHP5, Reflection, Annotations, Web Services, WSDL-Generator, SOAP-Handler-Chains, WS-Security, REST.
 \end{keywords}
 % Note that keywords are not normally used for peerreview papers.
 
@@ -344,7 +345,8 @@ Um eine Klasse in PHP5 als Web Service anzubieten, erstellt man zunächst eine Be
 
 Das ist natürlich bei weitem nicht so komfortabel, wie man es von .NET oder Java~EE gewohnt ist. Zwar ist die SOAP-Implementierung sehr einfach zu benutzen, aber die manuelle Erstellung von WSDL-Beschreibungen ist sehr aufwändig und könnte prinzipiell automatisiert werden. Um also professionell in großen Systemen Web Services anzubieten benötigt man umfangreiche Werkzeugunterstützung. Typischerweise verwendet man in anderen Programmiersprachen Annotationsmechanismen um Klassen und Methoden einer Anwendung zu markieren, die als Web Service verwendet werden sollen. Mit dem so markierten Quelltext wird eine Werkzeugkette angestoßen, die dann WSDL-Beschreibungen, zusätzlichen Code für Stubs und Skeletons und falls nötig Deployment-Deskriptoren generiert, mit denen die Web Services sofort bereit für den Produktiveinsatz sind.
 
-Unser Ziel war es also die Lücken in der Werkzeugunterstützung für PHP5 zu schließen.
+Das Ziel unserer Arbeit war es, die Lücken in der Werkzeugunterstützung für PHP5 zu schließen.
+
 
 \section{Extended Reflection API}
 Die in PHP5 integrierte Reflection API bietet die grundlegenden Möglichkeiten,
@@ -1029,32 +1031,29 @@ Der WSDL-Generator unterstützt den WSDL 1.1 Standard für document-literal, rpc-l
 Zur Markierung von Klassen und Methoden als Web Service können Annotationen ähnlich wie in Java~EE und .NET verwendet werden. Zusätzlich werden semantische Informationen aus dem Quelltext in die WSDL-Dokumentation übernommen.
 Für document-wrapped Web Services können mit dem Adapter-Generator automatisch Adapter-Klassen generiert werden, die sich transparent um das Wrapping in den SOAP-Nachrichten kümmern.
 
-Die rund 20 weiterführenden WS-*-Spezifikationen im Bereich der Sicherheit, Synchronisation und Sessioning, 
-%Stefan: ununterbrochen? weiß man nicht, und ist auch nur nen füllwort
-an denen zur Zeit ununterbrochen gearbeitet wird, 
+Die rund 20 weiterführenden WS-*-Spezifikationen im Bereich der Sicherheit, Synchronisation und Sessioning, an denen zur Zeit gearbeitet wird, 
 werden zusätzliche Felder für die Header von SOAP-Nachrichten spezifizieren. Um diese Standards in Zukunft mit PHP nutzen zu können entwickelten wir den Extended SOAP Server, der um weitere Handler erweitert werden kann, die als Kette von SOAP-Intermediaries nacheinander eine SOAP-Nachricht bearbeiten.
 Auf der Basis des Extended SOAP Servers haben wir das Username-Token-Profile aus dem WS-Security Standard für PHP5 implementiert. Damit ist es Anwendungen, die einen Web Service nutzen, möglich sich beim Dienstanbieter sicher zu authentifizieren.
 
-%TODO: something about REST
 Als alternative zu Web Services mit komplexen SOAP-Stacks und 
 dem damit verbundenen Aufwand, werden die Web Services im 
 REST-Stil besonders bei Entwicklern zunehmend
 beliebter. Dies hat auf der einen Seite mit dem geringen Toolbedarf
-und damit einem geringeren Einstiegaufwand zu tun und auf der anderen
+und damit einem geringeren Einstiegsaufwand zu tun und auf der anderen
 Seite mit den Vorteilen dieses Architekturstils und der damit verbundenen
-Interoperabilität.
-
+Interoperabilität. 
 Um dieser Entwicklung Rechnung zu tragen, wurden zusätzliche zu den SOAP-Tools 
 entsprechende Werkzeuge zum Erleichtern der Entwicklung von REST Services implementiert.
 Diese ermöglichen die automatische Generierung eines REST Servers der die Serviceanfragen 
 entgegen nimmt und außerdem bei Bedarf die Authentifikation des Clients über
 HTTP Digest durchführt.
 
-Das entwickelte Admin-Tool bietet schließlich eine einheitliche Oberfläche
+Das entwickelte Administrations-Tool bietet schließlich eine einheitliche Oberfläche
 um alle Werkzeuge zu konfigurieren und zu starten und damit 
 automatisiert SOAP-Server für eine bestehende Anwendung zu generieren.
 
-
+Trotzdem es Pläne gibt die entwickelten Werkzeuge in einem konkreten Projekt einzusetzen,
+lag ein besonderes Augenmerk darauf alle Komponenten so allgemein und wiederverwendbar wie möglich zu gestalten.
 
 % if have a single appendix:
 %\appendix[Proof of the Zonklar Equations]
