kleinigkeiten am paper
git-svn-id: svn://svn.code.sf.net/p/instantsvc/code/trunk@325 4c906e0b-d405-0410-8fec-a64e80c61ebf

--- a/doc/papers/3rd paper/3rd paper.tex
+++ b/doc/papers/3rd paper/3rd paper.tex
@@ -1040,7 +1040,7 @@ Die rund 20 weiterführenden WS-*-Spezifikationen im Bereich der Sicherheit, Sync
 werden zusätzliche Felder für die Header von SOAP-Nachrichten spezifizieren. Um diese Standards in Zukunft mit PHP nutzen zu können entwickelten wir den Extended SOAP Server, der um weitere Handler erweitert werden kann, die als Kette von SOAP-Intermediaries nacheinander eine SOAP-Nachricht bearbeiten.
 Auf der Basis des Extended SOAP Servers haben wir das Username-Token-Profile aus dem WS-Security Standard für PHP5 implementiert. Damit ist es Anwendungen, die einen Web Service nutzen, möglich sich beim Dienstanbieter sicher zu authentifizieren.
 
-Als alternative zu Web Services mit komplexen SOAP-Stacks und 
+Als Alternative zu Web Services mit komplexen SOAP-Stacks und 
 dem damit verbundenen Aufwand, werden die Web Services im 
 REST-Stil besonders bei Entwicklern zunehmend
 beliebter. Dies hat auf der einen Seite mit dem geringen Toolbedarf
